--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,112 @@
-pandas
-numpy
-financiallib
-scikit-learn
-plotly
-
--e .
+aiohttp==3.8.5
+aiosignal==1.3.1
+appdirs==1.4.4
+asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
+async-timeout==4.0.3
+attrs==23.1.0
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+beautifulsoup4==4.12.2
+bleach==6.0.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+comm @ file:///croot/comm_1671231121260/work
+contourpy==1.1.1
+-e git+https://github.com/Neelakash-gituser/ETHUSDT-Prediction.git@e8a88d53aea71f6d17e59e7bbcd117c193edf2d0#egg=crypto_research_engine
+cssutils==2.7.1
+cycler==0.11.0
+dataframe-image==0.2.1
+debugpy @ file:///croot/debugpy_1690905042057/work
+decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+defusedxml==0.7.1
+empyrical==0.5.5
+et-xmlfile==1.1.0
+executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+fastjsonschema==2.18.0
+financiallib==2.0.3
+fonttools==4.42.1
+frozendict==2.3.8
+frozenlist==1.4.0
+html2image==2.0.4.3
+html5lib==1.1
+idna==3.4
+importlib-metadata @ file:///croot/importlib-metadata_1678997070253/work
+importlib-resources==6.1.0
+ipykernel @ file:///croot/ipykernel_1691121631942/work
+ipython @ file:///croot/ipython_1691532092695/work
+jedi @ file:///tmp/build/80754af9/jedi_1644315233700/work
+Jinja2==3.1.2
+joblib==1.3.2
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jupyter_client @ file:///croot/jupyter_client_1680171862562/work
+jupyter_core @ file:///croot/jupyter_core_1679906564508/work
+jupyterlab-pygments==0.2.2
+kiwisolver==1.4.5
+lxml==4.9.3
+MarkupSafe==2.1.3
+matplotlib==3.7.3
+matplotlib-inline @ file:///opt/conda/conda-bld/matplotlib-inline_1662014470464/work
+mistune==3.0.1
+mkl-fft @ file:///croot/mkl_fft_1695058164594/work
+mkl-random @ file:///croot/mkl_random_1695059800811/work
+mkl-service==2.4.0
+multidict==6.0.4
+multitasking==0.0.11
+nbclient==0.8.0
+nbconvert==7.8.0
+nbformat==5.9.2
+nest-asyncio @ file:///croot/nest-asyncio_1672387112409/work
+numpy @ file:///work/mkl/numpy_and_numpy_base_1682953417311/work
+openpyxl==3.1.2
+packaging @ file:///croot/packaging_1693575174725/work
+pandas==2.0.3
+pandas-datareader==0.10.0
+pandocfilters==1.5.0
+parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+patsy==0.5.3
+peewee==3.16.3
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow==10.0.1
+pkgutil_resolve_name==1.3.10
+platformdirs @ file:///croot/platformdirs_1692205439124/work
+plotly==5.17.0
+prompt-toolkit @ file:///croot/prompt-toolkit_1672387306916/work
+psutil @ file:///opt/conda/conda-bld/psutil_1656431268089/work
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+Pygments @ file:///croot/pygments_1684279966437/work
+pykalman==0.9.5
+pymannkendall==1.4.3
+pyparsing==3.1.1
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+pytz==2023.3.post1
+pyzmq @ file:///croot/pyzmq_1686601365461/work
+referencing==0.30.2
+reportlab==4.0.5
+requests==2.31.0
+rpds-py==0.10.3
+scikit-learn==1.3.1
+scipy==1.10.1
+seaborn==0.12.2
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+soupsieve==2.5
+stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+statsmodels==0.14.0
+TA-Lib @ file:///home/conda/feedstock_root/build_artifacts/ta-lib_1695113053642/work
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tinycss2==1.2.1
+tornado @ file:///croot/tornado_1690848263220/work
+tqdm==4.66.1
+traitlets==5.10.0
+typing_extensions @ file:///croot/typing_extensions_1690297465030/work
+tzdata==2023.3
+urllib3==2.0.5
+wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+webencodings==0.5.1
+websocket-client==1.6.3
+xgboost==2.0.0
+yarl==1.9.2
+yfinance==0.2.29
+zipp @ file:///croot/zipp_1672387121353/work
